added new config for apple

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             AppleID.auth.init({
                 clientId : 'muuutest.apple.service',
                 scope : 'email password',
-                redirectURI : 'https://staging.muuu.uuum.tokyo/',
+                redirectURI : 'https://admiring-galileo-3fe3f7.netlify.com/redirect.html',
                 usePopup : false, //or false defaults to false,
                 state: 'intitial user authentication'
             });
