added proper scope

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script type="text/javascript">
             AppleID.auth.init({
                 clientId : 'muuutest.apple.service',
-                scope : 'email password',
+                scope : 'name email',
                 redirectURI : 'https://admiring-galileo-3fe3f7.netlify.com/redirect.html',
                 usePopup : false, //or false defaults to false,
                 state: 'intitial user authentication'
