--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="login-btn" id="appleid-signin" data-color="black" data-border="true" data-type="sign in">sign in</div>
         <script type="text/javascript">
             AppleID.auth.init({
-                clientId : 'muuutest.apple.service',
+                clientId : 'jp.glossom.muuutestapplesignin',
                 scope : 'name email',
                 redirectURI : 'https://admiring-galileo-3fe3f7.netlify.com/redirect.html',
                 usePopup : false, //or false defaults to false,
